feat(ffi): Ruby, C# and Java clients reach the same surface as PHP and Python
The five one-file clients now implement one contract, the one
docs/clients.md states under "The client surface, for every language":
`execute` with `rows_affected`/`last_insert_id`/`is_ddl`, `query` returning
iterable rows with `all`/`first`/`value`/`column`/`raw`, `insert` returning
the row id, `transaction` with rollback, nesting and write-conflict retry,
`:name` parameters rewritten outside quoted runs, typed errors by the
engine message's prefix, the library resolved once per process, and the
raw `run` kept public.

Each carries a self-test making the same checks, and all five were run
against the built library: PHP 8.4, Python 3, Ruby 4 (x86_64 build, the
Ruby here is Rosetta), Java on JDK 26, C# on .NET 10. Two things the run
found that review had not: the Java file used the JDK 21 preview names
(`allocateUtf8`/`getUtf8String`), which do not exist in the final FFM API
it claimed to need — it could never have compiled on JDK 22+ — and the C#
cell decoder's conditional unified `long` and `double` to `double`, so
every integer came back as a real.

docs/clients.md's Ruby, C# and Java quickstarts now show the shipped files
rather than an inline class each.